# pickup/src/main/java/com/ootd/pickup/consignments/dto/request/ModifyConsignmentRequest.java
@@ -6,6 +6,7 @@ import jakarta.validation.constraints.Size;
 import java.util.List;
 
 public record ModifyConsignmentRequest(
+    String cardState,
     String majorDefect,
     @NotNull @Valid CertificateRequest certificate,
     @NotNull @Size(min = 2, max = 5) @Valid List<ConsignmentImageRequest> images) {}
