# pickup/src/main/java/com/ootd/pickup/consignments/dto/response/GetConsignmentDetailResponse.java
@@ -15,6 +15,7 @@ public record GetConsignmentDetailResponse(
     Long consignmentId,
     GetCardDetailResponse card,
     String sellerMemberNickname,
+    String cardState,
     String majorDefect,
     ConsignmentStatus status,
     AuctionStatus auctionStatus,
@@ -34,6 +35,7 @@ public record GetConsignmentDetailResponse(
         consignment.getConsignmentId(),
         GetCardDetailResponse.from(consignment.getCard()),
         sellerMemberNickname,
+        consignment.getCardState(),
         consignment.getMajorDefect(),
         consignment.getStatus(),
         auctionSummary == null ? null : auctionSummary.auctionStatus(),
