# pickup/src/main/java/com/ootd/pickup/consignments/dto/response/GetMyConsignmentsResponse.java
@@ -13,6 +13,7 @@ public record GetMyConsignmentsResponse(
     Long auctionId,
     GetCardDetailResponse card,
     Long sellerMemberId,
+    String cardState,
     String majorDefect,
     ConsignmentStatus status,
     AuctionStatus auctionStatus,
@@ -31,6 +32,7 @@ public record GetMyConsignmentsResponse(
         auctionSummary == null ? null : auctionSummary.auctionId(),
         GetCardDetailResponse.from(consignment.getCard()),
         sellerMemberId,
+        consignment.getCardState(),
         consignment.getMajorDefect(),
         consignment.getStatus(),
         auctionSummary == null ? null : auctionSummary.auctionStatus(),
